# crewAi_2025

./: Ollama_report.md  README.md  hello.py  pyproject.toml  report.md
content/entity/: chroma.sqlite3
content/long_term/: mydatabase.db
content/short_term/: chroma.sqlite3
step_01_simple_crew/: crew.py
step_02_crew_using_yaml_config/: crew.py
step_02_states/: structured_state.py  unstructured_state.py
step_03_conditional_flows/: conditional_and_flow.py  conditional_or_flow.py  conditional_router_flow.py
step_04_flows/: basic_flow.py
step_05_crew_using_yaml_config/: crew.py  main.py
step_05_crew_using_yaml_config/output/: report.md
step_06_conditional_flows/: and_flow.py  conditional_and_flow.py  or_flow.py
step_06_tools/: crew.py  main.py
step_06_tools/config/: agents.yaml  tasks.yaml
step_06_tools/tools/: math_tools.py
step_07_knowledge/: main.py  pdf_knowledge.py
step_08_memory/: chatbot.py  mem0_chatbot.py
test/: crew.py
